--- a/package.json
+++ b/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "clean": "del-cli dist",
+    "sw": "sw-precache --root=dist --config=precache-config.js --maximumFileSizeToCacheInBytes=4194304",
+    "static-serve": "simplehttpserver -b localhost -p 4200 dist",
+    "buildAll": "npm run clean && npm run ngc && npm run build && npm run sw",
+    "build": "webpack",
+    "start": "webpack-dev-server --port=4200",
+    "test": "karma start ./karma.conf.js",
+    "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
+    "e2e": "protractor ./protractor.conf.js",
+    "ngc": "ngc"
   },
   "private": true,
   "dependencies": {
@@ -31,18 +35,40 @@
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
+    "autoprefixer": "^6.5.3",
     "codelyzer": "~3.0.1",
+    "css-loader": "^0.28.1",
+    "cssnano": "^3.10.0",
+    "del-cli": "^1.1.0",
+    "exports-loader": "^0.6.3",
+    "file-loader": "^0.10.0",
+    "istanbul-instrumenter-loader": "^2.0.0",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
+    "json-loader": "^0.5.4",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
+    "less-loader": "^4.0.2",
+    "postcss-loader": "^1.3.3",
+    "postcss-url": "^5.1.2",
     "protractor": "~5.1.2",
+    "raw-loader": "^0.5.1",
+    "sass-loader": "^6.0.3",
+    "script-loader": "^0.7.0",
+    "simplehttpserver": "0.0.6",
+    "source-map-loader": "^0.2.0",
+    "style-loader": "^0.13.1",
+    "stylus-loader": "^3.0.1",
+    "sw-precache": "^5.2.0",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "~2.3.3",
+    "url-loader": "^0.5.7",
+    "webpack": "~2.4.0",
+    "webpack-dev-server": "~2.4.5"
   }
 }
